# router/router.go
@@ -45,6 +45,7 @@ func InitRouter(Router *gin.RouterGroup) {
 		EsRouter.POST("/query/paper/title", v1.TitleQueryPaper)
 		EsRouter.POST("/query/paper/advanced", v1.AdvancedSearch)
 		EsRouter.POST("/select/paper/title", v1.TitleSelectPaper)
+		EsRouter.POST("/query/paper/author_name", v1.AuthorNameQueryPaper)
 		EsRouter.POST("/query/author/name", v1.NameQueryAuthor)
 		EsRouter.POST("/query/paper/doi", v1.DoiQueryPaper)
 		//EsRouter.POST("/query/paper/abstract", v1.AbstractQueryPaper)
